[gd_scene load_steps=16 format=3 uid="uid://cjjcwfil4vt7w"]

[ext_resource type="Script" path="res://player/scripts/player.gd" id="1_3nbws"]
[ext_resource type="PackedScene" uid="uid://chbcgqj40iuj" path="res://weapons/wand.tscn" id="2_ivwlt"]

[ext_resource type="WwiseRTPC" uid="uid://t4nqbdfk4r16" path="res://Wwise/resources/Game Parameter/{35CEA8A7-DA9F-48C4-90AB-1D66145863CF}.tres" id="2_tx4mv"]
[ext_resource type="PackedScene" uid="uid://c7jj1a7xswf00" path="res://char_components/scenes/health_bar.tscn" id="2_rpfbq"]
[ext_resource type="Texture2D" uid="uid://djkefbtfpebke" path="res://assets/ui/Final health bar.png" id="3_2in4s"]
[ext_resource type="PackedScene" uid="uid://cl1ys84xdtb60" path="res://journal/scenes/JournalUI.tscn" id="4_anngu"]
[ext_resource type="PackedScene" uid="uid://d0seeddykde1t" path="res://char_components/scenes/health_component.tscn" id="4_qib34"]
[ext_resource type="PackedScene" uid="uid://b21q77rjdvxm4" path="res://char_components/scenes/hitbox_component.tscn" id="5_q2tud"]
[ext_resource type="WwiseEvent" uid="uid://cjaq8lcyyl7h5" path="res://Wwise/resources/Event/{084A66E5-751C-49A4-979C-19CA4C46EED2}.tres" id="7_u22ds"]
[ext_resource type="WwiseEvent" uid="uid://b0hi6ksacg8mf" path="res://Wwise/resources/Event/{846235B5-08C0-423B-B387-394F814BE827}.tres" id="10_6ad7p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65n5d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlo3i"]
bg_color = Color(0.816744, 0, 0.257432, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l1fuj"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_lyeip"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mj0hv"]

[node name="Player" type="CharacterBody3D" groups=["Player Groups"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
collision_layer = 3
collision_mask = 9
script = ExtResource("1_3nbws")
rtpc = ExtResource("2_tx4mv")

[node name="HealthBar" parent="." instance=ExtResource("2_rpfbq")]
anchors_preset = -1
anchor_left = 0.0140625
anchor_top = -0.000925926
anchor_right = 0.0140625
anchor_bottom = 0.00277778
offset_left = 154.0
offset_top = 167.0
offset_right = 640.0
offset_bottom = 196.0
scale = Vector2(0.8, 0.6)
theme_override_styles/background = SubResource("StyleBoxFlat_65n5d")
theme_override_styles/fill = SubResource("StyleBoxFlat_vlo3i")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="HealthBar"]
position = Vector2(214.125, 15)
scale = Vector2(0.302782, 0.333333)
texture = ExtResource("3_2in4s")

[node name="TopDownCam" type="Camera3D" parent="."]
transform = Transform3D(2, 0, 0, 0, -8.7423e-08, 2, 0, -2, -8.7423e-08, 0, 100, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_l1fuj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_lyeip")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="PlayerCam" type="Camera3D" parent="head"]
transform = Transform3D(2, 0, 0, 0, 1.99778, -0.0941776, 0, 0.0941776, 1.99778, 0.0243361, 0.0280199, 0)
current = true

[node name="Wand" parent="head/PlayerCam" instance=ExtResource("2_ivwlt")]
transform = Transform3D(0.499315, 0.000411029, 0.0261647, 0, 0.499938, -0.00785365, -0.026168, 0.0078429, 0.499252, 0.139205, -0.0643819, -0.194059)

[node name="InteractRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2.5)
collision_mask = 4

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Journal_UI" parent="." instance=ExtResource("4_anngu")]

[node name="HealthComponent" parent="." instance=ExtResource("4_qib34")]
MAX_HEALTH = 25.0
is_player = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_q2tud")]
collision_layer = 2
collision_mask = 32
health_component = NodePath("../HealthComponent")

[node name="HitBox" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_mj0hv")

[node name="health_timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AkListener3D" type="AkListener3D" parent="."]

[node name="AkEvent3D" type="AkEvent3D" parent="."]
event = ExtResource("7_u22ds")
trigger_on = 1
stop_on = 3

[node name="rtpc" type="AkEvent3D" parent="."]
event = ExtResource("10_6ad7p")
trigger_on = 2
